Text fixes & layout jump fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 main {
     max-width: 48rem;
-    margin: 0 auto 3rem;
+    margin: 0 6rem 3rem;
     padding: 0 2rem;
 }
 .site-header {
